# 2d_lidar_person_detection

./: README.md  README_en.md  install.sh
dr_spaam_ros/: CMakeLists.txt  package.xml
dr_spaam_ros/config/: dr_spaam_ros.yaml  topics.yaml
dr_spaam_ros/launch/: dr_spaam_ros.launch
dr_spaam_ros/msg/: LegPoseArray.msg
dr_spaam_ros/param/: dr_spaam_param.yaml
dr_spaam_ros/scripts/: drow_data_converter.py  plot_test.py
dr_spaam_ros/src/dr_spaam_ros/: dr_spaam_ros.py  dr_spaam_ros_scripts.py
dr_spaam_ros/weights/: .gitignore
