<?xml version="1.0"?>
<package>
  <name>dr_spaam_ros</name>
  <version>1.0.0</version>
  <description>ROS interface for DR-SPAAM detector</description>

  <maintainer email="jia@vision.rwth-aachen.de">Dan Jia</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>rosbag</depend>
  <depend>rospack</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sobits_msgs</depend>
</package>
